# proposalnet

./: .gitignore  README.md
codes/deeplearning/data/: __init__.py  pose_workbench.py  workbench.py
codes/deeplearning/data/datasets/: __init__.py  aflw_dataset.py  coco_dataset.py  cocowider_dataset.py  dataset.py  deepfashion_dataset.py
codes/deeplearning/data/image/: __init__.py  aflw_image.py  coco_image.py  deepfashion_image.py  image.py  image_deploy.py
codes/deeplearning/dnn/blobs/: __init__.py  blobs.py  proposal.py
codes/deeplearning/dnn/interfaces/: __init__.py  interface.py  proposal_interface.py
codes/deeplearning/dnn/networks/: __init__.py  feat_networks.py  network.py  proposal_network.py  selection_networks.py
codes/deeplearning/dnn/ops/: CMakeLists.txt  bbox_delta.cpp  bbox_delta.py  frcnn_prepare.cpp  frcnn_prepare.py  frcnn_prepare_test.py  loss_ops.py  overlaps.cpp  overlaps.py  proposal_decode.cpp  proposal_decode.py  proposal_decode_reshape.cpp  proposal_decode_reshape.py  proposal_encode.cpp  proposal_encode.py  roi_pool.cpp  roi_pool.py  script_bbox_delta.py  script_roi_pool.py  script_smooth_L1.py  smooth_L1.cpp  smooth_L1.py
codes/deeplearning/dnn/ops/ops_cpu/: CMakeLists.txt  bbox_delta_cpu.cpp  bbox_delta_cpu.hpp  frcnn_prepare_op_cpu.cpp  frcnn_prepare_op_cpu.hpp  overlaps_op_cpu.cpp  overlaps_op_cpu.hpp  proposal_decode_op_cpu.cpp  proposal_decode_op_cpu.hpp  proposal_decode_reshape_op_cpu.cpp  proposal_decode_reshape_op_cpu.hpp  proposal_encode_op_cpu.cpp  proposal_encode_op_cpu.hpp  roi_pool_op_cpu.cpp  roi_pool_op_cpu.hpp  smooth_L1_cpu.cpp  smooth_L1_cpu.hpp
codes/deeplearning/dnn/ops/ops_gpu/: CMakeLists.txt  bbox_delta_gpu.cu  bbox_delta_gpu.hpp  cuda_tools.hpp  frcnn_prepare_op_gpu.cu  frcnn_prepare_op_gpu.hpp  overlaps_op_gpu.cu  overlaps_op_gpu.hpp  proposal_decode_op_gpu.cu  proposal_decode_op_gpu.hpp  proposal_decode_reshape_op_gpu.cu  proposal_decode_reshape_op_gpu.hpp  proposal_encode_op_gpu.cu  proposal_encode_op_gpu.hpp  roi_pool_op_gpu.cu  roi_pool_op_gpu.hpp  smooth_L1_gpu.cu  smooth_L1_gpu.hpp
codes/deeplearning/dnn/py_ops/: __init__.py  common.py  proposal.py
codes/deeplearning/learning/: trainer.py
codes/proposal/: _init.py  dev.py  test.py  train.py
codes/proposal/proposal_config/: config.py  models_cfg.py
codes/proposal/proposal_config/configs/: __init__.py  base.py  conf_proposal.py  conf_proposal_patch.py
